--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
+/*Body styling*/
+
+html * {
+  margin: 0;
+  padding: 0;
+}
+
 body {
+  height: 100%;
+  width: 100%;
   color: #f0efef;
   background-color: #DCA348;
   font-size: 26px;
@@ -7,10 +16,16 @@ body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   font-weight: 300;
 }
+
+/*a link styling*/
+
 a {
   text-decoration: none;
   color: #f9e42e;
 }
+
+/*Top Navigation styling */
+
 .topnavigation {
   width: 100%;
   margin: 0 auto;
@@ -19,11 +34,14 @@ a {
   font-size: 70px;
   font-weight: 800;
 }
+
+/*header styling*/
+
 header {
   background-image: url(say-what.jpg);
   background-attachment: fixed;
   width: 100%;
-  height: 170px;
+  height: 10%;
   padding: 35px 0;
   overflow: hidden;
 }
@@ -46,200 +64,212 @@ header nav ul li a {
   color: #f9e42e;
 }
 
+/*footer styling*/
+
 footer {
   background-image: url(say-what.jpg);
   background-attachment: fixed;
+  text-align: center;
   bottom: 0;
   width: 100%;
-  height: 70px;
+  height: 10%;
   padding: 35px 0;
-}
-aside ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 250px;
-  background-color: #DCA348;
-  height: 300px;
-}
-aside li a {
-  display: block;
-  color: #2C2012;
-  font-weight: 800;
-  text-decoration: none;
-  text-align: center;
 }
 .gamecontainer {
   background-color: #DCA348;
-  width: 80%;
-  height: 350px;
-  margin: 0 auto;
+  width: 100%;
+  height: 600px;
   padding-top: 35px;
 }
-.marie {
-  padding-right: 150px;
+.game-questions{
+  font-size: 0px;
+  border: 10px solid white;
+  width:750px;
+  margin: 0 auto;
+}
+.game-questions > * {
   display: inline-block;
   height: 320px;
   width: 250px;
-  background-image: url(marie_a.jpg);
+  font-size: 16px;
+  text-align:center;
+  padding: 30px;
+  box-sizing: border-box;
+  vertical-align: top;
   background-repeat: no-repeat;
+  background-position: center;
+  /*border: 2px solid red;*/
+}
+.marie {
+  background-image: url(marie_a.jpg);
 }
 .marie:hover {
   background-image: url(marie_quote.jpg);
 }
 .sherlock {
-  padding-right: 150px;
-  display: inline-block;
-  height: 320px;
-  width: 250px;
   background-image: url(sherlock.jpg);
-  background-repeat: no-repeat;
 }
 .sherlock:hover {
   background-image: url(sherlockquote.jpg);
 }
 .rahulg {
-  display: inline-block;
-  height: 320px;
-  width: 250px;
   background-image: url(rahulg.jpg);
-  background-repeat: no-repeat;
 }
 .rahulg:hover {
   background-image: url(rahulgquote.jpg);
 }
-.buttoncontainer {
-  display: inline-block;
-  margin: 0 auto;
-  text-align: center;
-  background-color: #DCA348;
-  /*background-color: #DCA348;*/
-  width: auto;
-  height: auto;
-  padding-top: 35px;
-  padding-left: 150px;
-  padding-right: 200px;
-}
-.scoresheet{
-  height: 100px;
+.scoresheet {
+  height: 20%;
   width: 50%;
   text-align: center;
   margin: 0 auto;
-  background-color: purple;
+  background-color: #DCA348;
 }
-p{
+p {
   font-size: 40px;
   color: #f0efef;
 }
-h3{
+h3 {
   text-align: center;
   font-size: 15px;
-  color:white;
+  color: white;
 }
-
 form {
-    margin: 0 auto;
-    width: 400px;
-    padding: 1em;
-    border: 1px solid #CCC;
-    border-radius: 1em;
+  margin: 0 auto;
+  width: 400px;
+  padding: 1em;
+  border: 1px solid #CCC;
+  border-radius: 1em;
 }
 form div + div {
-    margin-top: 1em;
+  margin-top: 1em;
 }
 label {
-    display: inline-block;
-    width: 90px;
-    text-align: right;
+  display: inline-block;
+  width: 90px;
+  text-align: right;
 }
-label.radio:before{
-content: " ";
-display: inline;
-width:10px;
-height:10px;
-background-color: red;
-border-radius: 50%
+label.radio:before {
+  content: " ";
+  display: inline;
+  width: 10px;
+  height: 10px;
+  background-color: red;
+  border-radius: 50%
 }
-label.radio{
-content: " ";
-visibility: none;
+label.radio {
+  content: " ";
+  visibility: none;
 }
 input, textarea {
-    font: 1em sans-serif;
-    width: 300px;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border: 1px solid #999;
+  font: 1em sans-serif;
+  width: 300px;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px solid #999;
 }
 input:focus, textarea:focus {
-    border-color: yellow;
+  border-color: yellow;
 }
 textarea {
-    /* To properly align multiline text fields with their labels */
-    vertical-align: top;
-
-    /* To give enough room to type some text */
-    height: 5em;
-
-    /* To allow users to resize any textarea vertically
+  /* To properly align multiline text fields with their labels */
+  vertical-align: top;
+  /* To give enough room to type some text */
+  height: 5em;
+  /* To allow users to resize any textarea vertically
        It does not work on all browsers */
-    resize: vertical;
+  resize: vertical;
 }
-.textcontainer{
+.textcontainer {
   text-align: center;
   padding: 35px 35px;
 }
-blockquote{
+blockquote {
   font-weight: 600;
 }
 .modalDialog {
-	position: fixed;
-	font-family: Arial, Helvetica, sans-serif;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background: rgba(0,0,0,0.8);
-	z-index: 99999;
-	opacity:0;
-	-webkit-transition: opacity 400ms ease-in;
-	-moz-transition: opacity 400ms ease-in;
-	transition: opacity 400ms ease-in;
-	pointer-events: none;
+  position: fixed;
+  font-family: Arial, Helvetica, sans-serif;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 99999;
+  opacity: 0;
+  -webkit-transition: opacity 400ms ease-in;
+  -moz-transition: opacity 400ms ease-in;
+  transition: opacity 400ms ease-in;
+  pointer-events: none;
 }
 .modalDialog:target {
-	opacity:1;
-	pointer-events: auto;
+  opacity: 1;
+  pointer-events: auto;
 }
-
 .modalDialog > div {
-	width: 400px;
-	position: relative;
-	margin: 10% auto;
-	padding: 5px 20px 13px 20px;
-	border-radius: 10px;
-	background: #fff;
-	background: -moz-linear-gradient(#fff, #999);
-	background: -webkit-linear-gradient(#fff, #999);
-	background: -o-linear-gradient(#fff, #999);
+  width: 400px;
+  position: relative;
+  margin: 10% auto;
+  padding: 5px 20px 13px 20px;
+  border-radius: 10px;
+  background: #fff;
+  background: -moz-linear-gradient(#fff, #999);
+  background: -webkit-linear-gradient(#fff, #999);
+  background: -o-linear-gradient(#fff, #999);
 }
 .close {
-	background: #606061;
-	color: #FFFFFF;
-	line-height: 25px;
-	position: absolute;
-	right: -12px;
-	text-align: center;
-	top: -10px;
-	width: 24px;
-	text-decoration: none;
-	font-weight: bold;
-	-webkit-border-radius: 12px;
-	-moz-border-radius: 12px;
-	border-radius: 12px;
-	-moz-box-shadow: 1px 1px 3px #000;
-	-webkit-box-shadow: 1px 1px 3px #000;
-	box-shadow: 1px 1px 3px #000;
+  background: #606061;
+  color: #FFFFFF;
+  line-height: 25px;
+  position: absolute;
+  right: -12px;
+  text-align: center;
+  top: -10px;
+  width: 24px;
+  text-decoration: none;
+  font-weight: bold;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  border-radius: 12px;
+  -moz-box-shadow: 1px 1px 3px #000;
+  -webkit-box-shadow: 1px 1px 3px #000;
+  box-shadow: 1px 1px 3px #000;
 }
-
-.close:hover { background: #00d9ff; }
+.close:hover {
+  background: #00d9ff;
+}
+footer ul li {
+  display: inline-block;
+  list-style: none;
+  margin: 0 26px 75px;
+}
+footer p {
+  font-size: 18px;
+  color: #fff;
+  font-weight: 600;
+}
+.buttongroup{
+  display: inline;
+}
+#submit-btn1,#submit-btn2,#submit-btn3,#submit-btn4,#submit-btn5,#submit-btn6{
+  background-color: #f9e42e;
+}
+#scoremessage p{
+  color: red;
+  font-size: 15px;
+  font-weight: 800;
+}
+.marie a, .sherlock a, .rahulg a{
+  text-decoration: none;
+  color: black;
+  font-weight: 800;
+}
+.textcontainer p:first-of-type:first-letter {
+  float: left;
+  font-size: 80px;
+  line-height: 65px;
+  padding-top: 4px;
+  padding-right: 8px;
+  padding-left: 3px;
+  font-weight: 600;
+}
